# lab2

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
keys/: sample-cryptocontext.txt  sample-key-private.txt  sample-key-public.txt
protos/: pir.proto
src/: CMakeLists.txt  pir_client_template.cc  pir_server_template.cc  test.cc
